# LabStructAnalyzer

./: .gitignore  CREATE_EXTERNAL_TOOL.md  README.md  compose.yaml  lti_config.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  alembic.ini.example  app.py  labstructanalyzer.db  pyproject.toml
backend/alemibic/: env.py
backend/alemibic/versions/: 0080fa1d9e44_new_column_at_report.py  34ce7b2ec09e_template_add_nesting_element_support_.py  4d2ef3d081d5_fix_type_report_id.py  5eaa5394f1a5_report_answers_change_index_in_templates.py  e28c48d06652_template_models.py  eb8d7a381f5a_tables_with_right_struct_and_indices.py  fba143dfbf04_add_pre_score.py
backend/labstructanalyzer/: config.py  database.py  main.py
backend/labstructanalyzer/configs/: config.py  jwtRS256.key  jwtRS256.key.pub  lti_config.json  lti_config.json.example  structure.json
backend/labstructanalyzer/core/: database.py  dependencies.py  exception_handlers.py  exceptions.py  logger.py
backend/labstructanalyzer/domain/: report.py  report_status.py  template.py  template_element.py
backend/labstructanalyzer/exceptions/: access_denied.py  invalid_action.py  lis_service_no_access.py  no_entity.py  parser.py
backend/labstructanalyzer/models/: UserCourseInfo.py  answer.py  answer_type.py  report.py  template.py  template_element.py  user_info.py  user_model.py
backend/labstructanalyzer/repository/: answer.py  report.py  template.py  template_element.py
backend/labstructanalyzer/routers/: courses_router.py  file_router.py  jwt_router.py  lti_router.py  rbac_decorator.py  report_router.py  template_router.py  test_router.py  users_router.py
backend/labstructanalyzer/schemas/: answer.py  hint.py  modify_template.py  report.py  template.py  template_element.py  user.py
backend/labstructanalyzer/services/: ags.py  answer.py  background_task.py  grade.py  hint_context.py  hint_generator.py  pre_grader.py  report.py  roles.py  secrets_store.py  template.py  template_element.py  template_matcher.py
backend/labstructanalyzer/utils/: embedder.py  file_saver.py  file_utils.py  hal_hypermodel.py  hint_generator.py  lti_validator.py  rbac_decorator.py  ttl_cache.py
backend/tests/: test_background_task.py  test_courses_router.py  test_jwt_router.py  test_lti_router.py  test_pre_grader.py  test_users_router.py
(+151 files in other folders)
