[tool.poetry]
name = "labstructanalyzer"
version = "0.1.0"
description = ""
authors = ["Marina Kistanova <vestertp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.2"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
lxml = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "labstructanalyzer.main:start_dev"