[tool.poetry]
name = "labstructanalyzer"
version = "0.1.0"
description = ""
authors = ["Marina Kistanova <vestertp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "0.115.2" }
uvicorn = { extras = ["standard"], version = "0.32.0" }
fastapi-another-jwt-auth = "0.1.11"
lxml = "5.3.0"
pydantic = "2.9.2"
oauthlib = "3.2.2"
python-dotenv = "1.0.1"
pylti1p3 = "2.0.0"
sqlmodel = "0.0.22"
aiosqlite = "0.20.0"
alembic = "1.14.0"
mysqlclient = "2.2.7"
aiomysql = "0.2.0"
asyncpg = "0.30.0"
rapidfuzz = "3.13.0"
setuptools = "80.0.0"
psycopg2-binary = "2.9.10"
boto3 = "1.38.25"
razdel = "0.5.0"
pymorphy3 = "2.0.3"
compress-fasttext = "0.1.5"
scipy = "1.13.1"
gensim = "4.3.3"
scikit-learn = "1.7.0"
fastapi-hypermodel = "2.2.0"
redis = {extras = ["hiredis"], version = "^7.0.0"}
rq = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "labstructanalyzer.main:start_dev"
prod = "labstructanalyzer.main:start_prod"
